No extern crate in lib.rs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 authors = ["Andrew Chin <achin@eminence32.net>"]
 
 
-[target.x86_64-unknown-linux-gnu.dependencies]
+[dependencies]
 libc = "0.1"
 
