--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 name = "terminal_size"
 version = "0.1.0"
 authors = ["Andrew Chin <achin@eminence32.net>"]
+description = "Gets the size of your Linux or Windows terminal"
+documentation = "http://eminence.github.io/terminal-size/doc/terminal_size/index.html"
+repository = "https://github.com/eminence/terminal-size"
+keywords = ["terminal", "console", "term", "size", "dimensions"]
+license = "MIT"
 
 
 [dependencies]
