--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ description = "Gets the size of your Linux or Windows terminal"
 documentation = "http://eminence.github.io/terminal-size/doc/terminal_size/index.html"
 repository = "https://github.com/eminence/terminal-size"
 keywords = ["terminal", "console", "term", "size", "dimensions"]
-license = "MIT"
+license = "MIT OR Apache-2.0"
 
 
 [dependencies]
