--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "terminal_size"
-version = "0.1.7"
+version = "0.1.8"
 authors = ["Andrew Chin <achin@eminence32.net>"]
 description = "Gets the size of your Linux or Windows terminal"
 documentation = "http://eminence.github.io/terminal-size/doc/terminal_size/index.html"
@@ -11,5 +11,6 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 libc = "0.2"
-winapi = "0.2"
-kernel32-sys = "0.2"
+
+[target.'cfg(windows)'.dependencies]
+winapi = { version = "0.3", features = ["winnt", "processenv", "wincon", "winbase"] }
