--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,12 @@ edition = "2018"
 [dependencies]
 libc = "0.2"
 
-[target.'cfg(windows)'.dependencies]
-winapi = { version = "0.3", features = ["winnt", "processenv", "wincon", "winbase"] }
+[target.'cfg(windows)'.dependencies.winapi]
+version = "0.3"
+features = [
+    "handleapi",
+    "processenv",
+    "winbase",
+    "wincon",
+    "winnt",
+]
