--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,8 @@ license = "MIT OR Apache-2.0"
 edition = "2018"
 
 
-[dependencies]
-libc = "0.2"
+[target.'cfg(not(windows))'.dependencies.libc]
+version = "0.2"
 
 [target.'cfg(windows)'.dependencies.winapi]
 version = "0.3"
