--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,12 +13,9 @@ edition = "2018"
 [target.'cfg(not(windows))'.dependencies.libc]
 version = "0.2"
 
-[target.'cfg(windows)'.dependencies.winapi]
-version = "0.3"
+[target.'cfg(windows)'.dependencies.windows-sys]
+version = "0.36.0"
 features = [
-    "handleapi",
-    "processenv",
-    "winbase",
-    "wincon",
-    "winnt",
+    "Win32_Foundation",
+    "Win32_System_Console",
 ]
