Add 1.48 to github actions CI matrix

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
     strategy:
       matrix:
         build: [linux, macos, windows]
+        toolchain: ["1.48.0", "stable", "beta", "nightly"]
         include:
           - build: linux
             os: ubuntu-latest
