--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
     name: Test
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         build: [linux, macos, windows]
         toolchain: ["1.48.0", "stable", "beta", "nightly"]
@@ -28,9 +29,29 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: ${{ matrix.toolchain }}
+      - name: Install toolchains (aarch64)
+        uses: actions-rs/toolchain@v1
+        if: contains(matrix.os, 'ubuntu')
+        with:
+          toolchain: ${{ matrix.toolchain }}
+          target: aarch64-linux-android
+      - name: Install toolchains (i686)
+        uses: actions-rs/toolchain@v1
+        if: contains(matrix.os, 'ubuntu')
+        with:
+          toolchain: ${{ matrix.toolchain }}
+          target: i686-unknown-linux-gnu
 
       - uses: actions-rs/cargo@v1
+        name: Cargo build
         with:
           command: build
+          toolchain: ${{ matrix.toolchain }}
 
+      - name: cargo build (aarch64)
+        run: cargo +${{ matrix.toolchain }} check --target aarch64-linux-android
+        if: contains(matrix.os, 'ubuntu')
+      - name: cargo build (i686)
+        run: cargo +${{ matrix.toolchain }} check --target i686-unknown-linux-gnu
+        if: contains(matrix.os, 'ubuntu')
