--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,15 +16,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        build: [linux, macos, windows]
-        toolchain: ["1.48.0", "stable", "beta", "nightly"]
-        include:
-          - build: linux
-            os: ubuntu-latest
-          - build: macos
-            os: macos-latest
-          - build: windows
-            os: windows-latest
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        toolchain: [1.48.0, stable, beta, nightly]
     steps:
       - uses: actions/checkout@v2
       - uses: dtolnay/rust-toolchain@master
